--- a/styles/components/_input.scss
+++ b/styles/components/_input.scss
@@ -1,17 +1,42 @@
-input {
-	&.ant-input {
-		background-color: $soft-gray;
+.ant-form-item,
+.ant-form-item-has-error {
+	input {
+		&.ant-input {
+			background-color: $soft-gray !important;
+			border-color: $input-border-color;
+			height: 44px;
+
+			&:hover,
+			&:focus {
+				border-color: $primary !important;
+			}
+
+			&:focus {
+				box-shadow: none !important;
+				outline: none !important;
+			}
+		}
+	}
+
+	.ant-input-password {
+		background-color: $soft-gray !important;
 		border-color: $input-border-color;
 		height: 44px;
 
-		&:hover,
-		&:focus {
-			border-color: $primary;
+		.ant-input {
+			background-color: transparent;
+			height: auto;
+			border: none;
 		}
 
-		&:focus {
+		&.ant-input-affix-wrapper-focused {
 			box-shadow: none !important;
 			outline: none !important;
+		}
+
+		&:hover,
+		&:focus {
+			border-color: $primary !important;
 		}
 	}
 }
